fix: make school inclusion checkbox readonly in program edit modal

--- a/iframe-content/programs/program.html
+++ b/iframe-content/programs/program.html
@@ -30,7 +30,7 @@
                 <label>Назва: <input type="text" id="edit-program-name" required></label><br>
                 <label>Вартість: <input type="number" id="edit-program-price" required></label><br>
                 <label>Причина зміни вартості: <input type="text" id="edit-program-price-reason"></label>
-                <span>Школа входить в програму: <label> <input type="checkbox" id="edit-schoolIncluded"> <span id="edit-schoolIncluded-string"></span> </label></span>
+                <span>Школа входить в програму: <label> <input type="checkbox" id="edit-schoolIncluded" readonly> <span id="edit-schoolIncluded-string"></span> </label></span>
                 <label>Інформація про програму: <textarea type="date" id="edit-program-info"></textarea></label><br>
                 <button id="save-edit-program">Зберегти</button><br>
                 <button onclick="$('#edit-program-modal').fadeOut()">Закрити</button>
