--- a/tailwind-2.html
+++ b/tailwind-2.html
@@ -109,7 +109,7 @@
           <li class="p-3 odd:bg-white even:bg-gray-50">Рядок 3</li>
           <li class="p-3 odd:bg-white even:bg-gray-50">Рядок 4</li>
         </ul>
-        <pre><code>&lt;li class="p-3 odd:bg-white even:bg-gray-50"&gt;...&lt;/li&gt;</code></pre>
+        <pre><code>&lt;ul class="p-3 odd:bg-white even:bg-gray-50"&gt;...&lt;/li&gt;</code></pre>
       </section>
 
       <section class="mb-10">
@@ -133,4 +133,5 @@
     </main>
   </div>
 </body>
+
 </html>
