--- a/sass/index.html
+++ b/sass/index.html
@@ -5,254 +5,199 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SASS: Mixins та Функції</title>
     <style>
-/*
- * Цей CSS-файл скомпільовано з SASS/SCSS.
- * Він демонструє використання Змінних, Наслідування та Вкладеності.
- */
+      <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
-/* Базові стилі */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.6;
+            color: #333;
+            background: linear-gradient(135deg, #771b81 0%, #f5576c 100%);
+            min-height: 100vh;
+        }
 
-body {
-  font-family: 'Arial', sans-serif;
-  font-size: 16px;
-  color: #343a40;
-  line-height: 1.6;
-}
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
 
-h1, h2, h3 {
-  color: #7340e2;
-  margin-bottom: 20px;
-}
+        header {
+            text-align: center;
+            padding: 40px 20px;
+            color: white;
+        }
 
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 20px;
-}
+        header h1 {
+            font-size: 3em;
+            margin-bottom: 10px;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+        }
 
-/* Наслідування: %spacing-vertical */
-.section, .project-card, .skill-card {
-  padding: 80px 0;
-}
+        header p {
+            font-size: 1.2em;
+            opacity: 0.9;
+        }
 
-/* Наслідування: %decorative-base */
-.project-card, .skill-card {
-  border: 1px solid #dee2e6;
-  border-radius: 5px;
-  transition: all 0.3s ease;
-  background-color: #ffffff;
-}
+        .section {
+            background: white;
+            border-radius: 15px;
+            padding: 40px;
+            margin-bottom: 30px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+            transition: transform 0.3s ease;
+        }
 
-/* Наслідування: %button-element-base */
-.button--primary, .project-card__content .button--project, .nav-list__item .nav-list__link {
-  border: 1px solid #dee2e6;
-  border-radius: 5px;
-  transition: all 0.3s ease;
-  background-color: #ffffff;
-  display: inline-block;
-  cursor: pointer;
-  text-align: center;
-  text-decoration: none;
-  font-weight: bold;
-  padding: 10px 20px;
-  font-size: 16px;
-}
+        .section:hover {
+            transform: translateY(-5px);
+        }
 
-/* Наслідування: %hover-grow */
-.button--primary:hover, .project-card:hover, .skill-card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
-}
+        .section h2 {
+            color: #771b81;
+            font-size: 2.2em;
+            margin-bottom: 20px;
+            border-bottom: 3px solid #771b81;
+            padding-bottom: 10px;
+        }
 
-/* =================================== */
-/* HEADER */
-/* =================================== */
-.header {
-  background-color: #343a40;
-  padding: 10px 0;
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-}
+        .section h3 {
+            color: #f5576c;
+            font-size: 1.5em;
+            margin-top: 30px;
+            margin-bottom: 15px;
+        }
 
-/* Вкладеність: .header .container */
-.header .container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  justify-content: flex-end; /* Перевизначення для вирівнювання праворуч */
-}
+        .section p {
+            margin-bottom: 15px;
+            font-size: 1.05em;
+        }
 
-/* Вкладеність: .header__nav .nav-list */
-.header__nav .nav-list {
-  list-style: none;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
+        .code-block {
+            background: #282c34;
+            color: #abb2bf;
+            padding: 20px;
+            border-radius: 8px;
+            overflow-x: auto;
+            margin: 20px 0;
+            border-left: 4px solid #771b81;
+        }
 
-/* Вкладеність: .header__nav .nav-list__item */
-.header__nav .nav-list__item {
-  margin-left: 20px;
-}
+        .code-block code {
+            font-family: 'Courier New', monospace;
+            font-size: 0.95em;
+            line-height: 1.8;
+        }
 
-/* Вкладеність: .header__nav .nav-list__link (успадковує %button-element-base) */
-.header__nav .nav-list__item .nav-list__link {
-  background-color: transparent;
-  color: #ffffff;
-  border-color: transparent;
-}
+        .keyword { color: #c678dd; }
+        .variable { color: #e06c75; }
+        .property { color: #d19a66; }
+        .value { color: #98c379; }
+        .selector { color: #61afef; }
+        .comment { color: #5c6370; font-style: italic; }
+        .function { color: #56b6c2; }
 
-/* Вкладеність: .nav-list__link:hover */
-.header__nav .nav-list__item .nav-list__link:hover {
-  color: #39c0a8;
-}
+        .benefits {
+            background: #f8f9fa;
+            padding: 20px;
+            border-radius: 8px;
+            margin: 20px 0;
+        }
 
-/* =================================== */
-/* HERO SECTION */
-/* =================================== */
-.hero {
-  background-color: #c2d2ea;
-  text-align: center;
-}
+        .benefits ul {
+            list-style-position: inside;
+            padding-left: 20px;
+        }
 
-/* Вкладеність: .hero .container */
-.hero .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+        .benefits li {
+            margin: 10px 0;
+            padding-left: 10px;
+        }
 
-/* Вкладеність: .hero__title */
-.hero__title {
-  font-size: 3em;
-  margin-bottom: 10px;
-}
+        .example-output {
+            background: #e8f5e9;
+            padding: 20px;
+            border-radius: 8px;
+            margin: 20px 0;
+            border-left: 4px solid #4caf50;
+        }
 
-/* Вкладеність: .hero__name */
-.hero__name {
-  color: #7340e2;
-}
+        .example-output h4 {
+            color: #2e7d32;
+            margin-bottom: 10px;
+        }
 
-/* Вкладеність: .hero__subtitle */
-.hero__subtitle {
-  font-size: 1.2em;
-  margin-bottom: 20px;
-}
+        .warning {
+            background: #fff3cd;
+            border-left: 4px solid #ffc107;
+            padding: 15px;
+            margin: 20px 0;
+            border-radius: 5px;
+        }
 
-/* Вкладеність: .button--primary (успадковує %button-element-base) */
-.hero .button--primary {
-  background-color: #7340e2;
-  color: #ffffff; /* Результат SASS-функції text-contrast(#7340e2) */
-  font-size: 1.2em;
-}
+        .info {
+            background: #d1ecf1;
+            border-left: 4px solid #17a2b8;
+            padding: 15px;
+            margin: 20px 0;
+            border-radius: 5px;
+        }
 
-/* Вкладеність: .button--primary:hover */
-.hero .button--primary:hover {
-  background-color: #5d34b5; /* Результат SASS-функції darken(#7340e2, 10%) */
-}
+        footer {
+            text-align: center;
+            color: white;
+            padding: 30px;
+            margin-top: 40px;
+        }
 
-/* =================================== */
-/* PROJECTS SECTION */
-/* =================================== */
-.section--dark {
-  background-color: #343a40;
-  color: #ffffff;
-}
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 20px 0;
+        }
 
-.section--dark h2, .section--dark h3 {
-  color: #39c0a8;
-}
+        table th {
+            background: #771b81;
+            color: white;
+            padding: 12px;
+            text-align: left;
+        }
 
-.projects-grid {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
-  margin-top: 80px;
-}
+        table td {
+            padding: 12px;
+            border: 1px solid #ddd;
+        }
 
-/* Міксин для адаптивності (media-tablet) */
-@media (max-width: 768px) {
-  .projects-grid {
-    grid-template-columns: 1fr;
-  }
-}
+        table tr:nth-child(even) {
+            background: #f8f9fa;
+        }
 
-.project-card {
-  /* Успадковує %decorative-base та %hover-grow */
-}
+        .comparison {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 20px;
+            margin: 20px 0;
+        }
 
-/* Вкладеність: .project-card__image */
-.project-card__image {
-  width: 100%;
-  height: auto;
-  display: block;
-  border-radius: 5px 5px 0 0;
-}
+        .comparison-item {
+            padding: 20px;
+            border-radius: 8px;
+            border: 2px solid;
+        }
 
-/* Вкладеність: .project-card__content */
-.project-card__content {
-  padding: 20px;
-}
+        .comparison-item.mixin {
+            border-color: #771b81;
+            background: #fef5ff;
+        }
 
-/* Вкладеність: .project-card__title */
-.project-card__title {
-  color: #7340e2;
-  margin-bottom: 10px;
-}
-
-/* Вкладеність: .project-card .button--project */
-.project-card .button--project {
-  background-color: #39c0a8;
-  color: #343a40; /* Результат SASS-функції text-contrast(#39c0a8) */
-  margin-top: 10px;
-}
-
-/* =================================== */
-/* ABOUT SECTION (SKILLS) */
-/* =================================== */
-.skills-list {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 80px;
-}
-
-.skill-card {
-  /* Успадковує %button-element-base та %hover-grow */
-  display: flex;
-  max-width: 45%;
-  text-align: left;
-}
-
-/* Вкладеність: .skill-card__icon */
-.skill-card__icon {
-  padding-right: 10px;
-  border-right: 1px solid #dee2e6;
-  margin-right: 10px;
-  font-size: 2em;
-  flex-shrink: 0;
-}
-
-/* Вкладеність: .skill-card__title */
-.skill-card__title {
-  color: #39c0a8;
-  font-size: 1.2em;
-}
-
-/* Вкладеність: .skill-card__description */
-.skill-card__description {
-  font-size: 0.9em;
-  color: #343a40;
-}
+        .comparison-item.function {
+            border-color: #f5576c;
+            background: #fff5f7;
+        }
+    </style>
     </style>
     
 </head>
